# kube-mcp

./: README.md  pyproject.toml
kube_mcp/: __init__.py  __main__.py  server.py
