[project]
name = "kube-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "kubernetes>=32.0.1",
    "mcp[cli]>=1.7.1",
    "prettytable>=3.16.0",
]

[project.scripts]
mcp-kube = "kube_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
